--- a/Project1.vcxproj
+++ b/Project1.vcxproj
@@ -110,31 +110,31 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="Acceleration.hpp" />
-    <ClInclude Include="Area.hpp" />
-    <ClInclude Include="Distance.hpp" />
-    <ClInclude Include="Force.hpp" />
     <ClInclude Include="NormalShock.hpp" />
-    <ClInclude Include="Pressure.hpp" />
-    <ClInclude Include="Temperature.hpp" />
-    <ClInclude Include="Mass.hpp" />
-    <ClInclude Include="Time.hpp" />
-    <ClInclude Include="Types.hpp" />
-    <ClInclude Include="Velocity.hpp" />
+    <ClInclude Include="Types\Acceleration.hpp" />
+    <ClInclude Include="Types\Area.hpp" />
+    <ClInclude Include="Types\Distance.hpp" />
+    <ClInclude Include="Types\Force.hpp" />
+    <ClInclude Include="Types\Mass.hpp" />
+    <ClInclude Include="Types\Pressure.hpp" />
+    <ClInclude Include="Types\Temperature.hpp" />
+    <ClInclude Include="Types\Time.hpp" />
+    <ClInclude Include="Types\Types.hpp" />
+    <ClInclude Include="Types\Velocity.hpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Acceleration.cpp" />
-    <ClCompile Include="Area.cpp" />
-    <ClCompile Include="Distance.cpp" />
-    <ClCompile Include="Force.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="NormalShock.cpp" />
-    <ClCompile Include="Pressure.cpp" />
-    <ClCompile Include="Types.cpp" />
-    <ClCompile Include="Temperature.cpp" />
-    <ClCompile Include="Mass.cpp" />
-    <ClCompile Include="Time.cpp" />
-    <ClCompile Include="Velocity.cpp" />
+    <ClCompile Include="Types\Acceleration.cpp" />
+    <ClCompile Include="Types\Area.cpp" />
+    <ClCompile Include="Types\Distance.cpp" />
+    <ClCompile Include="Types\Force.cpp" />
+    <ClCompile Include="Types\Mass.cpp" />
+    <ClCompile Include="Types\Pressure.cpp" />
+    <ClCompile Include="Types\Temperature.cpp" />
+    <ClCompile Include="Types\Time.cpp" />
+    <ClCompile Include="Types\Types.cpp" />
+    <ClCompile Include="Types\Velocity.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
